--- a/TCN_NCKH/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/TCN_NCKH/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -105,6 +105,7 @@
                         <li class="nav-item"><a href="/Admin/Dapans/Index" class="nav-link @(ViewContext.RouteData.Values["Controller"]?.ToString() == "Dapans" ? "active" : "")"><i class="nav-icon fas fa-check-circle"></i><p>Quản lý Đáp Án</p></a></li>
                         <li class="nav-item"><a href="/Admin/Bocauhois/Index" class="nav-link @(ViewContext.RouteData.Values["Controller"]?.ToString() == "Bocauhois" ? "active" : "")"><i class="nav-icon fas fa-question-circle"></i><p>Quản lý Bộ Câu Hỏi</p></a></li>
                         <li class="nav-item"><a href="/Admin/LichthiSinhviens/Index" class="nav-link @(ViewContext.RouteData.Values["Controller"]?.ToString() == "LichthiSinhviens" ? "active" : "")"><i class="nav-icon fas fa-calendar-alt"></i><p>Lịch Thi Sinh Viên</p></a></li>
+                        <li class="nav-item"><a href="/Admin/LichSuLamBais/Index" class="nav-link @(ViewContext.RouteData.Values["Controller"]?.ToString() == "LichSuLamBais" ? "active" : "")"><i class="nav-icon fas fa-calendar-alt"></i><p>Lịch Sử Làm Bài</p></a></li>
                     </ul>
                 </nav>
             </div>
