--- a/TCN_NCKH/Areas/HocSinh/Views/Shared/_LayoutHocSinh.cshtml
+++ b/TCN_NCKH/Areas/HocSinh/Views/Shared/_LayoutHocSinh.cshtml
@@ -34,6 +34,7 @@
             <a asp-area="HocSinh" asp-controller="Lichthis" asp-action="Index"><i class="bi bi-calendar3"></i>Lịch thi</a>
             <a asp-area="HocSinh" asp-controller="DeThis" asp-action="Index"><i class="bi bi-file-earmark-text"></i>Đề thi</a>
             <a asp-area="HocSinh" asp-controller="Ketquathis" asp-action="Index"><i class="bi bi-bar-chart-line"></i>Kết quả</a>
+            <a asp-area="HocSinh" asp-controller="LichSuLamBais" asp-action="Index"><i class="bi bi-bar-chart-line"></i>Lịch sử làm bài</a>
             <a asp-area="HocSinh" asp-controller="NguoiDungs" asp-action="AccountDetails"><i class="bi bi-person-circle"></i>Thông tin</a>
         </div>
 
